# medict

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .prettierrc  .travis.yml  .yarnclean  CHANGELOG.md  LICENSE  Makefile  README.md  app.go  app_inner.go  bind.go  go.mod  go.sum  main.go  package-lock.json  package.json  resources.md  tsconfig.json  wails.json  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js  yarn.lock.back
.electron-vue/: webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
.githooks/: pre-commit
.github/: dependabot.yml
.github/backup/: build-release.yml
.github/workflows/: build-linux.yaml  build-macos-x86_64.yaml  build-release.yml  build.yaml  codeql-analysis.yml  dev-hot-build.yml  node-ci.yml  nodeci.yml  package-and-release.yaml  release-latest.yml
.github/workflows-bak/: build-macos-x86_64.yaml  build-windows.yaml  node-ci.yml  release-latest.yml  release-macos.yml
certs/: .gitignore
docs/: CNAME  Gemfile  README.md  _config.yml  index.markdown  jekyll-theme-modernist.gemspec
docs/_layouts/: default.html  home.html
docs/_posts/: 2023-09-24-welcome-to-jekyll.markdown
docs/assets/: baidu_translate_config.md  index.md  license.md  youdao_traslate_config.md
docs/docs/: CONTRIBUTING.md  SUPPORT.md
docs/script/: cibuild
frontend/: .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.js  watch.sh  webpack.config.js  webpack.plugins.js  webpack.rules.js
frontend/src/: App.vue  index.html  index.ts  main.js  renderer.init.ts  renderer.scss  routes.ts  settings.ts  vite.d.ts  vue-shim.d.ts
icons/: Medict.icns
internal/config/: config.go  (+6 more)
internal/libmdict/: .gitignore  CMakeLists.txt  README.md  adler32.cc  adler32.h  adler32_test.cc  binutils.cc  binutils.h  binutils_test.cc  fileutils.cc  fileutils.h  fmt.sh  mdict.cc  mdict.h  mdict_extern.cc  mdict_extern.h  mdict_extern_test.cc  mdict_simple_key.h  ripemd128.c  ripemd128.h  ripemd128_test.c  xmlutils.cc  xmlutils.h  xmlutils_test.cc  zlib_wrapper.h
internal/libmdict/tests/: CMakeLists.txt  test_lookup_01.cpp  test_wordlist.cpp
medict-v3/: go.mod  main.go  wails.json
src/: background.ejs  index.ts  subwindow.ts  trace.ts
static/: console.js  open-link-in-browser.js
tests/: ReplacerCSS.spec.ts  ReplacerJs.spec.ts  deug.js  fuzzytrie.json  fuzzytrie.spec.ts  historystack.spec.ts
tmain/: main.go
(+512 files in other folders)
